tests/A1/tests/reject/array.ul
int main(){
    int b[10];
    int x;
    x = b[];
}